--- a/.github/workflows/tests-orders.yml
+++ b/.github/workflows/tests-orders.yml
@@ -3,10 +3,10 @@ name: tests-orders
 on: 
   pull_request:
     paths:
-      - 'auth/**'
+      - 'orders/**'
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
