--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -13,7 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: cd auth && docker build -t ttfreeman/auth . 
-      - run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+      - run: 
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         env:
           $DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           $DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
