--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -19,7 +19,7 @@ jobs:
           $DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           $DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - run: docker push ttfreeman/auth
-        uses: digitalocean/action-doctl@v2
+      - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_TOKEN }}
       - run: doctl kubernetes cluster kubeconfig save dpc-cluster
